--- a/src/app/shared/modals/input-modal/input-modal.component.html
+++ b/src/app/shared/modals/input-modal/input-modal.component.html
@@ -29,7 +29,7 @@
   </div>
 
   <div class="modal-actions">
-    <button mat-flat-button color="primary" [disabled]="!nameControl.valid" (click)="onConfirm()">
+    <button mat-flat-button class="primary" [disabled]="!nameControl.valid" (click)="onConfirm()">
       {{ data.createLabel || 'Create' }}
     </button>
   </div>
