--- a/src/app/features/modals/settings/backend-modal/backend-security/backend-security.component.html
+++ b/src/app/features/modals/settings/backend-modal/backend-security/backend-security.component.html
@@ -35,7 +35,7 @@
 
       @if (showKeychainInput()) {
         <div class="card-form">
-          <mat-form-field appearance="outline">
+          <mat-form-field>
             <mat-label>Config Password</mat-label>
             <input
               matInput
@@ -74,7 +74,7 @@
         </mat-expansion-panel-header>
 
         <div class="card-form">
-          <mat-form-field appearance="outline">
+          <mat-form-field>
             <mat-label>Current Password</mat-label>
             <input
               matInput
@@ -91,7 +91,7 @@
             </button>
           </mat-form-field>
 
-          <mat-form-field appearance="outline">
+          <mat-form-field>
             <mat-label>New Password</mat-label>
             <input
               matInput
@@ -108,7 +108,7 @@
             </button>
           </mat-form-field>
 
-          <mat-form-field appearance="outline">
+          <mat-form-field>
             <mat-label>Confirm New Password</mat-label>
             <input
               matInput
@@ -153,7 +153,7 @@
             with access to your files.
           </p>
 
-          <mat-form-field appearance="outline">
+          <mat-form-field>
             <mat-label>Current Password</mat-label>
             <input
               matInput
@@ -199,7 +199,7 @@
       </div>
 
       <div class="card-form">
-        <mat-form-field appearance="outline">
+        <mat-form-field>
           <mat-label>Password</mat-label>
           <input
             matInput
@@ -216,7 +216,7 @@
           </button>
         </mat-form-field>
 
-        <mat-form-field appearance="outline">
+        <mat-form-field>
           <mat-label>Confirm Password</mat-label>
           <input
             matInput
